--- a/src/tg_bot_float_db_app/requirements.txt
+++ b/src/tg_bot_float_db_app/requirements.txt
@@ -1,6 +1,8 @@
+alembic==1.13.1
 Brotli==1.1.0
-fastapi==0.110.1
-pydantic==2.7.0
-SQLAlchemy==2.0.28
-uvicorn~=0.28.0
+fastapi==0.111.0
+pydantic==2.7.1
+SQLAlchemy==2.0.30
+pydantic-settings==2.2.1
+uvicorn~=0.29.0
 asyncpg==0.29.0
