--- a/src/tg_bot_float_csgo_db_source/csgo_db_source_variables.env
+++ b/src/tg_bot_float_csgo_db_source/csgo_db_source_variables.env
@@ -1,1 +1,6 @@
-
+base_url = "https://www.csgodatabase.com"
+weapons_page = "/weapons"
+skins_page = "/weapons/{weapon}"
+weapon_regex_pattern = '<h3 class="item-box-header.+">([\w\s-]+)<\/h3>'
+skin_regex_pattern = "<span class='block txt-med txt-white'>([\w\s'-]+)<\/span>"
+number_of_retries_when_unauthorized = 3
