--- a/src/tg_bot_float_db_updater/requirements.txt
+++ b/src/tg_bot_float_db_updater/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.5
 aiohttp_retry==2.8.3
 Brotli==1.1.0
-fastapi==0.111.0
-pydantic_settings==2.3.3
+fastapi==0.111.1
+pydantic_settings==2.3.4
+uvicorn~=0.29.0
