--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -1,5 +1,5 @@
 # tg specific variables
-token = "5691905011:AAE6xMnq1td82j4FBc5N8OY7qQhmxMv-s_c"
+token = ""
 
 # db specific variables
 db_url = "postgresql+asyncpg://classified:rv9up0ax@192.168.0.200:5432/tg_bot_float_db"
