--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -17,7 +17,8 @@ create_subscription_url = "/subscriptions/create"
 get_subscriptions_by_telegram_id_url = "/subscriptions/{telegram_id}"
 get_weapon_skin_quality_names_url = "/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}"
 delete_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
+get_users_telegram_ids_by_subscription_url = "/users_by_subscription/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
 
 # webhook variables
-ngrok_tunnel_url = "https://2ad9-185-91-165-107.ngrok-free.app"
+ngrok_tunnel_url = "https://8d7c-185-91-165-107.ngrok-free.app"
 webhook_url = "/webhook"
