added new varivbles in sub_benefit_finder_variables

--- a/src/tg_bot_float_sub_benefit_finder/sub_benefit_finder_variables.env
+++ b/src/tg_bot_float_sub_benefit_finder/sub_benefit_finder_variables.env
@@ -7,3 +7,5 @@ user_subscription_url="/subscriptions/tofind"
 csm_base_url="http://192.168.0.200:5004"
 steam_base_url="http://192.168.0.200:5005"
 item_url="/{weapon}/{skin}/{quality}/{stattrak}"
+telegram_app_base_url="http://192.168.0.200:5010"
+send_update_url="/send_update"
