Added new services (AgentsPageService, GlovesPageService), updated Dockerfile, updated AbstractPageService, WeaponsPageService, SkinsPageService.

--- a/src/tg_bot_float_csgo_db_source/csgo_db_source_variables.env
+++ b/src/tg_bot_float_csgo_db_source/csgo_db_source_variables.env
@@ -1,6 +1,12 @@
 base_url = "https://www.csgodatabase.com"
 weapons_page = "/weapons"
+gloves_page = "/gloves"
+agents_page = "/agents"
+gloves_skin_page = "/gloves/{glove}"
 skins_page = "/weapons/{weapon}"
 weapon_regex_pattern = '<h3 class="item-box-header.+">([\w\s-]+)<\/h3>'
+glove_regex_pattern = <span class='block txt-small txt-dark-grey'>((?!Weapon Case).[\w\s'-]+)*<\/span><span class='block txt-med txt-white'>([\w\s'-]+)<\/span>
+agent_regex_pattern = "<span class='block txt-small txt-dark-grey'>([\w\s'-]+)<\/span><span class='block txt-med txt-white'>([\w\s'-]+)<\/span>"
 skin_regex_pattern = "<span class='block txt-med txt-white'>([\w\s'-]+)<\/span>"
-number_of_retries_when_unauthorized = 3
+first_knife_weapon = "Bayonet"
+first_other_weapon = "Zeus x27"
