Added parent class AbstractRouterController and renamed classes that inherit from him

--- a/src/tg_bot_float_db_app/db_app_variables.env
+++ b/src/tg_bot_float_db_app/db_app_variables.env
@@ -1,1 +1,1 @@
-url = "postgresql+asyncpg://{username}:{password}@{ip}:{port}/{db_name}"
+url = "postgresql+asyncpg://classified:rv9up0ax@192.168.0.200:5432/tg_bot_float_db"
