--- a/src/tg_bot_float_csm_steam_market_benefit_finder/csm_steam_market_benefit_finder_variables.env
+++ b/src/tg_bot_float_csm_steam_market_benefit_finder/csm_steam_market_benefit_finder_variables.env
@@ -1,11 +1,11 @@
 db_app_base_url = "http://192.168.0.200:5001"
 
-weapon_skin_quality_names_url="/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}"
+get_item_names_for_subscription_url="/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}"
 
-user_subscription_url="/subscriptions/tofind"
+get_user_subscription_url="/subscriptions/tofind"
 
 csm_base_url="http://192.168.0.200:5004"
 steam_base_url="http://192.168.0.200:5005"
-item_url="/{weapon}/{skin}/{quality}/{stattrak}"
+get_item_url="/{weapon}/{skin}/{quality}/{stattrak}"
 telegram_app_base_url="http://192.168.0.200:5010"
 send_update_url="/send_update"
