--- a/src/tg_bot_float_csgo_db_source/requirements.txt
+++ b/src/tg_bot_float_csgo_db_source/requirements.txt
@@ -1,8 +1,9 @@
 aiohttp==3.9.5
 aiohttp_retry==2.8.3
-beautifulsoup4==4.12.3
+cloudscraper==1.2.71
+curl_cffi==0.7.1
 fake_useragent==1.5.1
-fastapi==0.111.0
+fastapi==0.111.1
+pydantic_settings==2.3.4
 uvicorn~=0.29.0
-pydantic-settings==2.2.1
-lxml==5.2.1
+
