--- a/src/tg_bot_float_csm_source/Dockerfile
+++ b/src/tg_bot_float_csm_source/Dockerfile
@@ -4,5 +4,6 @@ COPY tg_bot_float_csm_source/requirements.txt tg_bot_float_csm_source/
 RUN pip install --no-cache-dir --upgrade -r tg_bot_float_csm_source/requirements.txt
 COPY tg_bot_float_common_dtos/csm_source_dtos/ tg_bot_float_common_dtos/csm_source_dtos/
 COPY tg_bot_float_csm_source/ tg_bot_float_csm_source/
+COPY tg_bot_float_misc/router_controller/ tg_bot_float_misc/router_controller/
 EXPOSE 5004
 ENTRYPOINT [ "python", "-m", "uvicorn", "tg_bot_float_csm_source.main:app", "--host", "0.0.0.0", "--port", "5004"]
