--- a/src/tg_bot_float_db_app/requirements.txt
+++ b/src/tg_bot_float_db_app/requirements.txt
@@ -1,8 +1,8 @@
-alembic==1.13.1
 Brotli==1.1.0
-fastapi==0.111.0
+fastapi==0.111.1
+fastapi_pagination==0.12.26
 pydantic==2.7.1
+pydantic_settings==2.3.4
 SQLAlchemy==2.0.30
-pydantic-settings==2.2.1
 uvicorn~=0.29.0
 asyncpg==0.29.0
