--- a/src/tg_bot_float_scheduler/scheduler_variables.env
+++ b/src/tg_bot_float_scheduler/scheduler_variables.env
@@ -1,4 +1,3 @@
 db_updater="http://192.168.0.200:5006/update_db"
 db_url="postgresql+asyncpg://classified:rv9up0ax@192.168.0.200:5432/tg_bot_float_db"
-sub_benefit_finder_url="http://192.168.0.200:5007"
-find_item_with_benefit_url="/find_items_with_benefit"
+sub_benefit_finder_url="http://192.168.0.200:5007/find_items_with_benefit"
