added add subscription functionality

--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -1,9 +1,9 @@
 # tg specific variables
-token = ""
+tg_token = ""
 
 # db specific variables
 db_url = "postgresql+asyncpg://classified:rv9up0ax@192.168.0.200:5432/tg_bot_float_db"
-redis_host = "192.168.0.200"
+redis_host_url = "192.168.0.200"
 
 # db_app_service_client variables
 db_app_base_url = "http://192.168.0.200:5001"
@@ -12,7 +12,7 @@ get_user_url = "/users/telegram_id/{telegram_id}"
 get_weapons_url = "/weapons"
 get_skins_for_weapon_id_url = "/skins/weapon_id/{weapon_id}"
 get_qualities_for_weapon_skin_ids_url = "/qualities/id/{weapon_id}/{skin_id}"
-get_stattrak_existence_for_skin_id_url = "/skins/id/{skin_id}"
+get_stattrak_existence_for_skin_id_url = "/relations/stattrak_existence/{weapon_id}/{skin_id}/{quality_id}"
 create_subscription_url = "/subscriptions/create"
 get_subscriptions_by_telegram_id_url = "/subscriptions/{telegram_id}"
 get_weapon_skin_quality_names_url = "/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}"
