added new method in DBAppServiceClient

--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -1,5 +1,5 @@
 # tg specific variables
-tg_token = ""
+tg_token = "5691905011:AAE6xMnq1td82j4FBc5N8OY7qQhmxMv-s_c"
 
 # db specific variables
 db_url = "postgresql+asyncpg://classified:rv9up0ax@192.168.0.200:5432/tg_bot_float_db"
@@ -21,5 +21,5 @@ get_users_telegram_ids_by_subscription_url = "/users_by_subscription/{weapon_id}
 get_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
 
 # webhook variables
-ngrok_tunnel_url = ""
+ngrok_tunnel_url = "https://853b-185-91-165-84.ngrok-free.app"
 webhook_url = "/webhook"
