added new method delete_subscription in db_app_service_client

--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -15,10 +15,11 @@ get_qualities_for_weapon_skin_ids_url = "/qualities/id/{weapon_id}/{skin_id}"
 get_stattrak_existence_for_skin_id_url = "/relations/stattrak_existence/{weapon_id}/{skin_id}/{quality_id}"
 create_subscription_url = "/subscriptions/create"
 get_subscriptions_by_telegram_id_url = "/subscriptions/{telegram_id}"
-get_weapon_skin_quality_names_url = "/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}/{stattrak_existence}"
+get_weapon_skin_quality_names_url = "/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}"
+get_weapon_skin_quality_ids_url = "/relations/ids_by_name/{weapon_name}/{skin_name}/{quality_name}"
 delete_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
 get_users_telegram_ids_by_subscription_url = "/users_by_subscription/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
-get_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
+get_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}"
 
 # webhook variables
 ngrok_tunnel_url = "https://775e-185-91-165-84.ngrok-free.app"
