--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -7,20 +7,27 @@ redis_host_url = "192.168.0.200"
 
 # db_app_service_client variables
 db_app_base_url = "http://192.168.0.200:5001"
+
+# user_requests_urls
 create_user_url = "/users/create"
+delete_user_url = "/users/telegram_id/{telegram_id}"
 get_user_url = "/users/telegram_id/{telegram_id}"
+get_users_telegram_ids_by_subscription_url = "/users_by_subscription/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
+
+# weapon_skin_quality requests urls
 get_weapons_url = "/weapons"
 get_skins_for_weapon_id_url = "/skins/weapon_id/{weapon_id}"
 get_qualities_for_weapon_skin_ids_url = "/qualities/id/{weapon_id}/{skin_id}"
 get_stattrak_existence_for_skin_id_url = "/relations/stattrak_existence/{weapon_id}/{skin_id}/{quality_id}"
-create_subscription_url = "/subscriptions/create"
-get_subscriptions_by_telegram_id_url = "/subscriptions/{telegram_id}"
 get_weapon_skin_quality_names_url = "/relations/names_by_id/{weapon_id}/{skin_id}/{quality_id}"
 get_weapon_skin_quality_ids_url = "/relations/ids_by_name/{weapon_name}/{skin_name}/{quality_name}"
+
+# subscription requests urls
+create_subscription_url = "/subscriptions/create"
+get_subscriptions_by_telegram_id_url = "/subscriptions/{telegram_id}"
 delete_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
-get_users_telegram_ids_by_subscription_url = "/users_by_subscription/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
-get_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}"
+get_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
 
 # webhook variables
-ngrok_tunnel_url = "https://775e-185-91-165-84.ngrok-free.app"
+ngrok_tunnel_url = "https://7688-185-91-165-84.ngrok-free.app"
 webhook_url = "/webhook"
