--- a/src/tg_bot_float_telegram_app/telegram_app_variables.env
+++ b/src/tg_bot_float_telegram_app/telegram_app_variables.env
@@ -29,5 +29,5 @@ delete_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{q
 get_subscription_url = "/subscriptions/{telegram_id}/{weapon_id}/{skin_id}/{quality_id}/{stattrak}"
 
 # webhook variables
-ngrok_tunnel_url = "https://77c0-185-91-165-84.ngrok-free.app"
+ngrok_tunnel_url = "https://781d-185-91-165-84.ngrok-free.app"
 webhook_url = "/webhook"
