changed way to get respons for csm_wiki_source

--- a/src/tg_bot_float_csm_wiki_source/csm_wiki_source_variables.env
+++ b/src/tg_bot_float_csm_wiki_source/csm_wiki_source_variables.env
@@ -1,10 +1,15 @@
 base_url="https://wiki.cs.money"
 graphql_url="/api/graphql"
-number_of_retries_on_http_forbidden=3
-graphql_query='{"operationName": "get_min_available", "variables": {"name": ""}, "query": "query get_min_available($name: String!) {\n
-          get_min_available(name: $name) {\n
-            name\nisSouvenir\nisStatTrack\nbestPrice\n
-        bestSource\nsource {\n      trade {\n
-        lowestPrice\n        count\n      }
-        \n      market {\n        lowestPrice\n        count\n      }\n    }\n  }\n}"}'
-not_retry_statuses="200,403,404"
+headers='{
+            "origin": "https://wiki.cs.money",
+            "accept": "*/*",
+            "accept-encoding": "gzip, deflate, br, zstd",
+            "accept-language": "en,ru;q=0.9,en-US;q=0.8",
+            "content-type": "application/json"
+            }'
+graphql_query='{
+            "operationName": "get_min_available",
+            "variables": {"name": ""},
+            "query": "query get_min_available($name: String!) {\n  get_min_available(name: $name) {\n    name\n    isSouvenir\n    isStatTrack\n    bestPrice\n    bestSource\n    source {\n      trade {\n        lowestPrice\n        count\n      }\n      market {\n        lowestPrice\n        count\n      }\n    }\n  }\n}"
+        }'
+
