--- a/src/tg_bot_float_csm_source/csm_source_variables.env
+++ b/src/tg_bot_float_csm_source/csm_source_variables.env
@@ -1,10 +1,17 @@
 headers='{
-            "Accept": "application/json, text/plain, */*",
-            "Accept-Encoding": "gzip, deflate, br",
-            "Accept-Language": "en,ru;q=0.9",
-            "Sec-Fetch-Dest": "empty",
-            "Sec-Fetch-Mode": "cors",
-            "Sec-Fetch-Site": "same-origin"
-            }'
+    "origin": "https://wiki.cs.money",
+    "accept": "*/*",
+    "accept-encoding": "gzip, deflate, br, zstd",
+    "accept-language": "en,ru;q=0.9,en-US;q=0.8",
+    "content-type": "application/json",
+    "Sec-CH-UA": "\"Chromium\";v=\"114\", \"Google Chrome\";v=\"114\", \"Not:A-Brand\";v=\"99\"",
+    "Sec-CH-UA-Mobile": "?0",
+    "Sec-CH-UA-Platform": "\"Windows\"",
+    "Sec-Fetch-Dest": "document",
+    "Sec-Fetch-Mode": "navigate",
+    "Sec-Fetch-Site": "same-origin",
+    "Sec-Fetch-User": "?1",
+    "Upgrade-Insecure-Requests": "1"
+}'
 base_url="https://cs.money/5.0/load_bots_inventory/730"
 params="?hasTradeLock=false&isStatTrak={stattrak}&limit=60&name={weapon}%20{skin}&offset={offset}&quality={quality}"
