--- a/src/tg_bot_float_csm_wiki_source/csm_wiki_source_variables.env
+++ b/src/tg_bot_float_csm_wiki_source/csm_wiki_source_variables.env
@@ -1,12 +1,20 @@
 base_url="https://wiki.cs.money"
 graphql_url="/api/graphql"
 headers='{
-            "origin": "https://wiki.cs.money",
-            "accept": "*/*",
-            "accept-encoding": "gzip, deflate, br, zstd",
-            "accept-language": "en,ru;q=0.9,en-US;q=0.8",
-            "content-type": "application/json"
-            }'
+    "origin": "https://wiki.cs.money",
+    "accept": "*/*",
+    "accept-encoding": "gzip, deflate, br, zstd",
+    "accept-language": "en,ru;q=0.9,en-US;q=0.8",
+    "content-type": "application/json",
+    "Sec-CH-UA": "\"Chromium\";v=\"114\", \"Google Chrome\";v=\"114\", \"Not:A-Brand\";v=\"99\"",
+    "Sec-CH-UA-Mobile": "?0",
+    "Sec-CH-UA-Platform": "\"Windows\"",
+    "Sec-Fetch-Dest": "document",
+    "Sec-Fetch-Mode": "navigate",
+    "Sec-Fetch-Site": "same-origin",
+    "Sec-Fetch-User": "?1",
+    "Upgrade-Insecure-Requests": "1"
+}'
 graphql_query='{
             "operationName": "get_min_available",
             "variables": {"name": ""},
