--- a/src/tg_bot_float_db_updater/Dockerfile
+++ b/src/tg_bot_float_db_updater/Dockerfile
@@ -4,6 +4,7 @@ COPY tg_bot_float_db_updater/requirements.txt tg_bot_float_db_updater/
 RUN pip install --no-cache-dir --upgrade -r tg_bot_float_db_updater/requirements.txt
 COPY tg_bot_float_db_updater/ tg_bot_float_db_updater/
 COPY tg_bot_float_common_dtos/schema_dtos/ tg_bot_float_common_dtos/schema_dtos/
+COPY tg_bot_float_common_dtos/base_dto.py tg_bot_float_common_dtos/
 COPY tg_bot_float_common_dtos/update_db_scheduler_dtos/ tg_bot_float_common_dtos/update_db_scheduler_dtos/
 COPY tg_bot_float_common_dtos/csgo_database_source_dtos/ tg_bot_float_common_dtos/csgo_database_source_dtos/
 COPY tg_bot_float_common_dtos/csm_wiki_source_dtos/ tg_bot_float_common_dtos/csm_wiki_source_dtos/
