--- a/src/tg_bot_float_csm_wiki_source/Dockerfile
+++ b/src/tg_bot_float_csm_wiki_source/Dockerfile
@@ -1,4 +1,10 @@
 FROM python:3.12-slim
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ca-certificates \
+    curl \
+    gnupg \
+    tzdata \
+    && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY tg_bot_float_csm_wiki_source/requirements.txt tg_bot_float_csm_wiki_source/
 RUN pip install --no-cache-dir --upgrade -r tg_bot_float_csm_wiki_source/requirements.txt
