--- a/src/tg_bot_float_csgo_db_source/requirements.txt
+++ b/src/tg_bot_float_csgo_db_source/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp==3.9.5
-aiohttp_retry==2.8.3
-cloudscraper==1.2.71
-curl_cffi==0.7.1
-fake_useragent==1.5.1
-fastapi==0.111.1
-pydantic_settings==2.3.4
-uvicorn~=0.29.0
-
+curl_cffi==0.7.3
+fastapi==0.124.2
+httpx==0.28.1
+pydantic_settings==2.12.0
+pytest==9.0.1
+pytest_asyncio==1.3.0
+pytest_mock==3.15.1
+starlette==0.50.0
+uvicorn==0.32.0
